<resources>
    <string name="app_name">配时中心</string>
    <string name="login_tip">工程师登录</string>
    <string name="name">姓名</string>
    <string name="team">班组</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="login_out">注销</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">原密码（6-12位的数字和字母组合!）</string>
    <string name="new_password">新密码（6-12位的数字和字母组合!）</string>
    <string name="re_new_password">新密码确认</string>
    <string name="back">返回</string>
    <string name="new_record">最新任务</string>
    <string name="update">上传更新</string>
    <string name="work_list">工作记录</string>
    <string name="timing">配时查询</string>
    <string name="upgrade">升级</string>
    <string name="tip">提醒</string>
    <string name="record_list">工作记录</string>
    <string name="new_record_list">最新任务列表</string>
    <string name="name_not_null">姓名不能为空</string>
    <string name="team_not_null">班组不能为空</string>
    <string name="phone_not_null">请输入正确的手机号</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="strtus_str">当前状态:</string>
    <string name="back_home">下班</string>
    <string name="change_btn">点击切换</string>
    <string name="intersection_inurdoce">路口基本资料</string>
    <string name="road_peishi_info">路口配时信息</string>
    <string name="work_day">工作日</string>
    <string name="weekend">周六日</string>
    <string name="time_set">确定</string>
    <string name="cancel">关闭</string>
</resources>